--- a/Elinic/Content/styles.css
+++ b/Elinic/Content/styles.css
@@ -20,7 +20,6 @@
     font-size: 20px;
     margin: 0px;
     position: relative;
-    max-width: 50em;
     text-align: center;
     overflow: hidden;
 }
